  respectively should be used instead.
  
- The attribute :attr:`rpy2.robjects.RObject.slots` can now be implictly interated on
  (the method :meth:`__iter__` is now an alias for :meth:`keys`).

- The default Python-R conversion is now handling functions. This means that
  Python function can directly be used as parameters to R functions (when
  relevant).

Changes
-------

- Building/installing rpy2 with a development version of R does not require
  the use of option `--ignore-check-rversion` any longer. A warning is
  simply issue when the R version is "development".
  
Bug Fixed
---------

- Parameter names to R function that are in UTF-8 are no longer causing a
  segfault (issue #332)
  
- Looking for a missing key in an R environment (using `__getitem__` or `[`)
  could raise a `LookupError` instead of a `KeyError`.

- R environment can now handle unicode keys as UTF-8 (was previously
  trying Latin1)
  

Release 2.7.9
=============

Bug fixed
---------

- Python objects exposed to R could lead to segfault when the Python process is
  exiting (issue #331)


Release 2.7.8
=============

Bugs fixed
----------

- American English spelling was missing for some of the function names
  to specify colour (color) scales.
  
- Fix for printing R objects on Windows (pull request #47)


Release 2.7.7
=============

Bugs fixed
----------

- Pickling `robjects`-level objects resulted in `rinterface`-level objects
  when unpickled (issue #324).


Release 2.7.6
=============
 
Changes
-------

- :mod:`rpy2.robjects.lib.ggplot2` was modified to match the newly released
  ggplot2-2.0.0. This is introducing API-breaking changes, which breaks the
  promise to keep the API stable through bugfix releases within series, but
  without it 2.7.x will not a work with new default installation of the R
  package ggplot2.


Release 2.7.5
=============

Bugs fixed
----------

- Division and floordivision through the delegator `.ro` provided with